@@ -1,4 +1,6 @@
 Version 0.0.2 (not yet released):
+- In cvl/Makefile.am and cvtool/Makefile.am: use $(top_builddir) where
+  appropriate.
 - Replace '#ifdef _WIN32' with '#ifdef W32_NATIVE', where W32_NATIVE is defined
   in config.h if the following is true:
   '#if (defined _WIN32 || defined __WIN32__) && !defined __CYGWIN__'.
